--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "[![Open in Visual Studio Code](https://classroom.github.com/assets/open-in-vscode-2e0aaae1b6195c2367325f4f02e2d04e9abb55f0b24a779b69b11b9e10269abc.svg)](https://classroom.github.com/online_ide?assignment_repo_id=15564295&assignment_repo_type=AssignmentRepo) # GC01",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx nodemon server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.11.0",
-    "graphql": "^16.9.0"
+    "bcryptjs": "^2.4.3",
+    "graphql": "^16.9.0",
+    "mongodb": "^6.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
