--- a/client/package.json
+++ b/client/package.json
@@ -15,13 +15,14 @@
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.28",
     "expo-linear-gradient": "~13.0.2",
+    "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-read-more-text": "^1.1.2",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "expo-secure-store": "~13.0.2"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
