--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.74.5",
     "react-native-read-more-text": "^1.1.2",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "expo-updates": "~0.25.23"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
