--- a/client/package.json
+++ b/client/package.json
@@ -17,13 +17,14 @@
     "expo-linear-gradient": "~13.0.2",
     "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.23",
     "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-read-more-text": "^1.1.2",
+    "react-native-root-toast": "^3.6.0",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "expo-updates": "~0.25.23"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
